--- a/CreateDeviceIdentity/packages.config
+++ b/CreateDeviceIdentity/packages.config
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.Azure.Amqp" version="2.0.3" targetFramework="net452" />
-  <package id="Microsoft.Azure.Devices" version="1.2.4" targetFramework="net452" />
-  <package id="Microsoft.Azure.Devices.Shared" version="1.0.8" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net452" />
+  <package id="Microsoft.Azure.Amqp" version="2.4.4" targetFramework="net452" />
+  <package id="Microsoft.Azure.Devices" version="1.21.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Devices.Shared" version="1.20.1" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="net452" />
-  <package id="PInvoke.BCrypt" version="0.3.2" targetFramework="net452" />
-  <package id="PInvoke.Kernel32" version="0.3.2" targetFramework="net452" />
-  <package id="PInvoke.NCrypt" version="0.3.2" targetFramework="net452" />
-  <package id="PInvoke.Windows.Core" version="0.3.2" targetFramework="net452" />
-  <package id="Validation" version="2.2.8" targetFramework="net452" />
+  <package id="PInvoke.BCrypt" version="0.6.49" targetFramework="net452" />
+  <package id="PInvoke.Kernel32" version="0.6.49" targetFramework="net452" />
+  <package id="PInvoke.NCrypt" version="0.6.49" targetFramework="net452" />
+  <package id="PInvoke.Windows.Core" version="0.6.49" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="Validation" version="2.4.22" targetFramework="net452" />
 </packages>
