--- a/ReadDeviceToCloudMessages/packages.config
+++ b/ReadDeviceToCloudMessages/packages.config
@@ -1,4 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="WindowsAzure.ServiceBus" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.5.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.7" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.6.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.6.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.6.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net452" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.6.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" requireReinstallation="true" />
+  <package id="WindowsAzure.ServiceBus" version="6.0.2" targetFramework="net462" requireReinstallation="true" />
 </packages>
